# docs/swagger.yaml
@@ -1,11 +1,21 @@
+definitions:
+  fsysinfo.UpdatedFsInfo:
+    properties:
+      newFs:
+        items:
+          type: string
+        type: array
+      nonce:
+        type: string
+      signedFsRootHash:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
   /download/{spAddress}/{fileKey}/{signature}/{network}:
     get:
-      consumes:
-      - multipart/form-data
-      description: Save files from Storage Provider
+      description: Serve file by key
       parameters:
       - description: Storage Provider address
         in: path
@@ -27,12 +37,48 @@ paths:
         name: newtork
         required: true
         type: string
+      produces:
+      - application/octet-stream
       responses:
         "200":
           description: OK
           schema:
             type: file
-      summary: Save files
+      summary: Serve file
+  /update_fs/{spAddress}/{signedFsys}/{network}:
+    post:
+      consumes:
+      - application/json
+      description: Update Storage Provider's filesystem, etc. root hash, nonce, file
+        system
+      parameters:
+      - description: Storage Provider address
+        in: path
+        name: spAddress
+        required: true
+        type: string
+      - description: Signed Storage Provider root hash
+        in: path
+        name: signedFsys
+        required: true
+        type: string
+      - description: network type
+        in: path
+        name: newtork
+        required: true
+        type: string
+      - description: updatedFsInfo
+        in: body
+        name: updatedFsInfo
+        required: true
+        schema:
+          $ref: '#/definitions/fsysinfo.UpdatedFsInfo'
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Update Storage Provider's filesystem
   /upload/{size}/{network}:
     post:
       consumes:
